styles/ant.less
@import "~antd/dist/antd.less";
@import './variables.module.less';

// BODY SETUP

body {
  background: var(--cr-secondary-bg);
}

#__next {
  display: flex;
  flex-direction: column;
}

// ANT OVERRIDES

.ant-notification-notice {
  background-color: var(--cr-primary-bg);
  border: 1px solid var(--cr-primary-border);
  border-radius: 2px;
}

.ant-notification-notice-message {
  color: var(--cr-primary-text);
  margin-bottom: 0;
}

.ant-card-body {
  padding: 16px;
}

.ant-switch {
  &.ant-switch-checked {
    background-color: var(--cr-primary-color);
  }

  .ant-switch-handle {
    border-radius: 100%;
  }
}

.ant-menu-item a {
  color: var(--cr-primary-text);
}

.ant-menu-item a:hover, .ant-menu-item-selected a {
  color: var(--cr-primary-text);
}

.ant-menu-submenu-title {
  background-color: var(--cr-primary-bg);

  &:active {
    background-color: var(--cr-primary-bg);
  }
}

.ant-menu-title-content {
  font-size: 14px;
  line-height: 20px;

  &:hover::after {
    border-bottom: 0 !important;
  }
}

[data-id="logo"] .ant-menu-title-content {
  display: inline-block;
  line-height: 64px;

  span:first-child {
    top: 4px;
  }
}

.ant-tooltip .ant-tooltip-arrow-content, .ant-tooltip .ant-tooltip-inner {
  background-color: black !important;
}

:root[data-theme="theme-light"] {
  --cr-primary-bg: @white;
  --cr-secondary-bg: rgb(250, 250, 250);
  --cr-tertiary-bg: rgb(250, 250, 250);
  --cr-quartery-bg: @white;
  --cr-quintiary-bg: @geekblue-1;
  --cr-primary-text: @black;
  --cr-secondary-text: @black;
  --cr-tertiary-text: @black;
  --cr-mode-bg: transparent;
  --cr-primary-border: @border-color-split;
  --cr-secondary-border: #D9D9D9;
  --cr-success-color: @green-6;
  --cr-error-color: @red-6;
  --cr-primary-color: @geekblue-6;
  --cr-primary-tooltip: @cr-gray-10;
}
:root[data-theme="theme-dark"] {
  --cr-primary-bg: @cr-gray-3;
  --cr-secondary-bg: @cr-gray-2;
  --cr-tertiary-bg: @cr-gray-1;
  --cr-quartery-bg: @cr-gray-4;
  --cr-quintiary-bg: @cr-gray-4;
  --cr-primary-text: @white;
  --cr-secondary-text: @cr-gray-9;
  --cr-tertiary-text: @cr-gray-7;
  --cr-mode-bg: @cr-gold-1;
  --cr-primary-border: @cr-gray-4;
  --cr-secondary-border: @cr-gray-5;
  --cr-success-color: @cr-dark-success-color;
  --cr-error-color: @cr-dark-error-color;
  --cr-primary-color: @cr-dark-primary-color;
  --cr-primary-tooltip: @cr-gray-10;

  body::-webkit-scrollbar-track {
    background-color: var(--cr-tertiary-bg);
  }

  body::-webkit-scrollbar-thumb{
    background-color: var(--cr-primary-bg);
  }

  .ant-table-container {
    border-color: var(--cr-primary-border) !important;
  }
}

.ant-btn {
  border: 1px solid var(--cr-secondary-border);
  background-color: var(--cr-tertiary-bg);
  color: var(--cr-primary-text);

  &:hover, &:focus {
    background-color: var(--cr-quintiary-bg) !important;
    border-color: var(--cr-primary-color);
    color: var(--cr-primary-color);
  }
}

.ant-btn-primary {
  background: var(--cr-primary-color);
  border: none;
  color: white;

  &:hover, &:focus {
    background-color: var(--cr-primary-color);
  }
}

.ant-input-affix-wrapper {
  border: 1px solid var(--cr-secondary-border) !important;
  color: var(--cr-primary-text);
  border-radius: 2px;
  background-color: var(--cr-tertiary-bg);

  input {
    color: var(--cr-primary-text);
    background-color: var(--cr-tertiary-bg);
  }
}

.ant-input {
  &:hover {
    border-color: var(--cr-primary-color);
  }
}

.ant-input-clear-icon {
  svg {
    width: 16px;

    path {
      fill: #8C8C8C;
    }
  }
}

.ant-spin-dot-item {
  background-color: var(--cr-primary-color);
}

.ant-table-column-sorter-up.active, .ant-table-column-sorter-down.active {
  color: var(--cr-primary-color);
}

.ant-select > * {
  background-color: var(--cr-primary-bg) !important;
  box-shadow: none !important;
  color: var(--cr-primary-text);
}

.ant-select-dropdown {
  background-color: var(--cr-tertiary-bg);

  .rc-virtual-list-holder {
    max-height: 224px !important;
  }
}

.ant-select-suffix {
  path {
    fill: #8C8C8C;
  }
}

.ant-select-item-option {
  color: var(--cr-secondary-text) !important;
  background-color: var(--cr-tertiary-bg) !important;

  .ant-select-item-option-content {
    color: var(--cr-secondary-text) !important;
  }

  &:hover {
    background-color: var(--cr-quintiary-bg) !important;
  }
}

.ant-select-selector {
  border: 1px solid var(--cr-secondary-border) !important;
}

.ant-modal {
  div, input {
    background-color: var(--cr-primary-bg);
    color: var(--cr-secondary-text);
  }

  .ant-divider {
    border-color: var(--cr-secondary-border) !important;
  }

  input {
    border: 1px solid var(--cr-secondary-border);
  }

  .ant-modal-header, .ant-modal-body, .ant-modal-footer {
    border: 1px solid var(--cr-secondary-border) !important;
  }

  .ant-modal-header {
    background-color: var(--cr-secondary-bg) !important;
    border-bottom: 0 !important;

    .ant-modal-title {
      background-color: var(--cr-secondary-bg) !important;
    }
  }

  .ant-modal-footer {
    border-top: 0 !important;
  }

  .ant-modal-close {
    svg {
      width: 12px;
    }

    path  {
      fill: #8C8C8C;
    }

    &:hover {
      path  {
        fill: var(--cr-secondary-text);
      }
    }
  }
}

@media (max-width: @screen-sm) {
  .ant-modal {
    max-width: 100vw;
    max-height: 100vh;
    margin: 0 !important;
    padding: 0 !important;
    top: 0 !important;
  }
}

.ant-tag {
  border-color: transparent;
  background-color: #f5f5f5;
  border-radius: 2px;
  color: var(--cr-primary-text);
}

:root[data-theme="theme-dark"] {
  .ant-tag {
    background-color: var(--cr-tertiary-bg);
  }
}

.ant-tag-has-color {
  color: @white;
}

.ant-empty-description {
  color: var(--cr-secondary-text);
}

.ant-table-placeholder > * {
  background-color: var(--cr-secondary-bg) !important;
}

.ant-table, .ant-table-header, .ant-table-container  {
  background-color: var(--cr-secondary-bg);
  border-color: var(--cr-primary-border);
}

.ant-radio-button-wrapper {
  color: var(--cr-primary-text);
  border-color: var(--cr-secondary-border) !important;
  background-color: var(--cr-primary-bg) !important;

  &:hover {
    color: var(--cr-primary-color);
  }

  &:not(.ant-radio-button-wrapper-disabled)::before {
    background-color: transparent;
  }

  &.ant-radio-button-wrapper-checked {
    border-color: var(--cr-primary-color) !important;
    color: var(--cr-primary-color);

    &:hover {
      color: var(--cr-primary-color);
    }

    &:not(.ant-radio-button-wrapper-disabled) {
      &:focus-within {
        box-shadow: none;
      }
      &::before {
        background-color: var(--cr-primary-color);
      }
    }
  }
}

table {
  background-color: var(--cr-secondary-bg);
  border-left: 1px solid var(--cr-primary-border) !important;
  border-radius: 2px;

  thead tr th {
    font-weight: bold;
    background-color: var(--cr-secondary-bg) !important;
    color: var(--cr-primary-text) !important;
    user-select: none;
    border-right: 1px solid var(--cr-primary-border) !important;
    border-bottom: 0px solid var(--cr-primary-border) !important;
  }

  tbody tr {
    background-color: var(--cr-primary-bg) !important;
  }

  tbody tr td {
    border-right: 1px solid var(--cr-primary-border) !important;
    border-bottom: 1px solid var(--cr-primary-border) !important;
    color: var(--cr-primary-text) !important;
  }
}

